docs/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-background-color:#ff0000;
  --ifm-color-primary: #2e8555;
  --ifm-footer-background-color: #283648;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-footer-link-color: #fff;
  --ifm-footer-title-color: #fff;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */

[data-theme='light'] {
  --ifm-background-color: #F8F7F3;
  --ifm-navbar-background-color: #F8F7F3;
  --ifm-color-primary: #2BB381;
  --ifm-color-secondary: #F8F7F3;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}


html[data-theme='dark'] {
  --ifm-background-color:#314157;
  --ifm-footer-background-color: #283648;
  --ifm-card-background-color: #283648;
  --ifm-navbar-background-color: #283648;
  --ifm-color-primary: #2BB381;
  --ifm-color-secondary: #F8F7F3;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

[data-theme='dark'] .menu {
  background-color: #283648;
}

[data-theme='light'] .footer__copyright {
  color: #F8F7F3;
}

.subscription_button {
  background-color: #ffffff; 
  cursor: pointer;
  border: none; 
  padding: 8px 22px; 
  font-size: 15px; 
  color: #283648;
  transition: all 0.3s ease-in-out;
  border-radius: 24px;
}

.subscription_button:hover {
  background-color: #cacaca; 
}

.input_subscription {
  padding: 12px;
  width: 100%;
  margin-bottom: 10px;
  border-radius: 4px;
  background-color: transparent;
  border: 1px solid #99a2af8a;
  outline: none;
  color: #99a2af8a;
}

[data-theme='light'] .menu-content, [data-theme='light'] .rygJf{
  background-color: #F8F7F3;
}

/* [data-theme='light'] .cqVkUp, [data-theme='dark'] .cqVkUp {
  padding: 0;
} */
 
[data-theme='light'] .fMZBAB, .cBEcqm{
  background-color: #283648;
} 

[data-theme='dark'] .menu-content, [data-theme='dark'] .cMEczu{
  background-color: #283648;
}

[data-theme='light'] .eKEMWz, [data-theme='dark'] .jOwgVr, [data-theme='dark'] .eDeKjd {
  background-color: #283648;
}

